<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        tools:context="com.example.android.documentchecklist.MainActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/blueGrey"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Document Checklist"
                    android:textColor="@android:color/white"
                    android:textSize="25sp" />
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mahaState"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/mahaState"
                android:textColor="@color/blueGrey"
                android:textSize="16sp" />

            <Button
                android:id="@+id/outMahaState"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/outMahaState"
                android:textColor="@color/blueGrey"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <CheckBox
                android:id="@+id/allot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorCheckList"
                android:visibility="invisible"
                android:buttonTint="#FF5722"
                />

            <CheckBox
                android:id="@+id/ssc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorCheckList"
                android:visibility="invisible"
                android:buttonTint="#FF5722"
                />

            <CheckBox
                android:id="@+id/hsc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorCheckList"
                android:visibility="invisible"
                android:buttonTint="#FF5722"
                />

            <CheckBox
                android:id="@+id/leaving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorCheckList"
                android:visibility="invisible"
                android:buttonTint="#FF5722"/>

            <CheckBox
                android:id="@+id/proforma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorCheckList"
                android:visibility="invisible"
                android:buttonTint="#FF5722"/>

            <CheckBox
                android:id="@+id/jeeScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorCheckList"
                android:visibility="invisible"
                android:buttonTint="#FF5722"/>

            <CheckBox
                android:id="@+id/gapCertificate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorCheckList"
                android:visibility="invisible"
                android:buttonTint="#FF5722"/>

            <CheckBox
                android:id="@+id/adhaarCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorCheckList"
                android:visibility="invisible"
                android:buttonTint="#FF5722"
                />

            <CheckBox
                android:id="@+id/nationalityCer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorCheckList"
                android:visibility="invisible"
                android:buttonTint="#FF5722"/>

            <CheckBox
                android:id="@+id/domicile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorCheckList"
                android:visibility="invisible"
                android:buttonTint="#FF5722"/>

            <CheckBox
                android:id="@+id/photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorCheckList"
                android:visibility="invisible"
                android:buttonTint="#FF5722"/>


            <CheckBox
                android:id="@+id/migration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorCheckList"
                android:visibility="gone"
                android:buttonTint="#FF5722"/>

            <CheckBox
                android:id="@+id/casteCertificate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorCheckList"
                android:visibility="invisible"
                android:buttonTint="#FF5722"/>

            <CheckBox
                android:id="@+id/casteValidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorCheckList"
                android:visibility="invisible"
                android:buttonTint="#FF5722"/>

            <CheckBox
                android:id="@+id/nonCreamyLayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorCheckList"
                android:visibility="invisible"
                android:buttonTint="#FF5722"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="italic"
                android:id="@+id/note1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="italic"
                android:id="@+id/note2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="italic"
                android:id="@+id/copies"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
